--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node dist/index.js",
+
+    "start": " node dist/index.js",
     "dev": "tsc-watch --onSuccess \"npm start\""
   },
   "dependencies": {
@@ -18,6 +19,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
+    "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "tsc-watch": "^6.0.4"
   },
