--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "graphql": "^16.8.1",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
+    "redis": "^4.6.10",
     "tsc-watch": "^6.0.4"
   },
   "devDependencies": {
