--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,9 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="your postgres DATABASE_URL'
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres?schema=public"
 PORT=8000
+REDIS_PORT=12361
+REDIS_HOST=""
+REDIS_PASSWORD=""              
+NODE_ENV="development"
