--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,15 +26,15 @@ jobs:
             - name: Log in to Docker Hub
               uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
               with:
-                username: ${{ secrets.DOCKER_USERNAME }}
-                password: ${{ secrets.DOCKER_PASSWORD }}
+                username: ${{ secrets.DOCKERHUB_USERNAME }}
+                password: ${{ secrets.DOCKERHUB_TOKEN }}
 
             - name: Log in to the Container registry
               uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
               with:
                 registry: ghcr.io
                 username: ${{ github.actor }}
-                password: ${{ secrets.CONTAINER_PUBLISH }}
+                password: ${{ secrets.DOCKERHUB_TOKEN }}
 
             - name: Extract metadata (tags, labels) for Docker
               id: meta2
