--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,10 +2,8 @@ name: Publish Docker image
 on:
   workflow_dispatch:
   push:
-    paths:
-      - 'Dockerfile'
-      - '.dockerignore'
-      - '.github/workflows/docker-publish.yml'
+      branches:
+      - main
 jobs:
     push_to_registries:
         runs-on: ubuntu-latest
