--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,51 +2,44 @@ name: Publish Docker image
 on:
   workflow_dispatch:
   push:
-      branches:
+    branches:
       - main
+
 jobs:
-    push_to_registries:
-        runs-on: ubuntu-latest
-        env:
-            DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-            DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
-            FORCE_COLOR: 1
-        permissions:
-            packages: write
-            contents: read
-        steps:
-            - name: Check out the repo
-              uses: actions/checkout@v2.4.2
+  push_to_registries:
+    runs-on: ubuntu-latest
+    env:
+      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+      FORCE_COLOR: 1
+    permissions:
+      packages: write
+      contents: read
 
-            - name: Set up Docker Buildx
-              uses: docker/setup-buildx-action@v1
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2
 
-            - name: Log in to Docker Hub
-              uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
-              with:
-                username: ${{ secrets.DOCKERHUB_USERNAME }}
-                password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-            - name: Log in to the Container registry
-              uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
-              with:
-                registry: ghcr.io
-                username: ${{ github.actor }}
-                password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Log in to Docker Hub
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-            - name: Extract metadata (tags, labels) for Docker
-              id: meta2
-              uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
-              with:
-                images: |
-                    fgygh/fglanguage
-                    ghcr.io/${{ github.repository }}
-                tags: latest
-            - name: Build and push Docker images
-              uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
-              with:
-                context: .
-                push: true
-                tags: ${{ steps.meta.outputs.tags }}
-                labels: ${{ steps.meta.outputs.labels }}
-                uses: actions/checkout@v2
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta2
+        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        with:
+          images: fgygh/fglanguage
+        tags: latest
+
+      - name: Build and push Docker images
+        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta2.outputs.tags }}
+          labels: ${{ steps.meta2.outputs.labels }}
