--- a/.github/workflows/Push_to_DockerHub.yaml
+++ b/.github/workflows/Push_to_DockerHub.yaml
@@ -1,6 +1,5 @@
 name: Publish Docker image
 on:
-  workflow_dispatch:
   push:
     branches:
       - main
@@ -29,17 +28,9 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta2
-        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
-        with:
-          images: fgygh/fglanguage
-        tags: latest
-
       - name: Build and push Docker images
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
           context: .
           push: true
-          tags: ${{ steps.meta2.outputs.tags }}
-          labels: ${{ steps.meta2.outputs.labels }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/your-image-name:latest
